Fixed a visual bug by adding a z-index to the navbar so it stays above other elements like flashcards.

--- a/styles/main.css
+++ b/styles/main.css
@@ -33,6 +33,7 @@ nav {
 	height: 50px;
 	background-color: #0047AB;
 	box-shadow: 0px 1px 15px 2px black;
+	z-index: 100;
 }
 
 /* Disable default styles for the navbar elements (stored as a list)*/
